# aiir

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .typos.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  SPEC.md  SPEC_GOVERNANCE.md  THREAT_MODEL.md  TRADEMARK.md  action.yml  aiir.env  fuzz_cli.py  mcp-manifest.json  noxfile.py  pyproject.toml  receipt_0c1766c28cde_a256337d7ecf6518.json  receipt_0f45a0c7e2dc_a25603388885813e.json  receipt_157aa1e2cfdc_a25670d585762438.json  receipt_1f4600a1f36a_a256f12c455563ff.cbor  receipt_304b4b8f36f2_a25604dd5dfcaa1f.json  receipt_458d661755bf_a256ab8d3b2a3906.cbor  receipt_458d661755bf_a256ab8d3b2a3906.json  receipt_458d661755bf_a256ab8d3b2a3906.json.sigstore  receipt_506dada66acd_a2560c2fad9dbb39.json  (+42 more)
.aiir/: .gitignore  index.json  receipts.jsonl
.aiir/receipts/: receipt_003458e8f64a_a2569bb075495c69.cbor  receipt_003458e8f64a_a2569bb075495c69.json  receipt_00676c36c989_a2561336520376db.cbor  receipt_00676c36c989_a2561336520376db.json  receipt_0136dd109a8f_a256b217c11cbb49.cbor  receipt_0136dd109a8f_a256b217c11cbb49.json  receipt_015b04f57086_a256946adc738275.cbor  receipt_015b04f57086_a256946adc738275.json  receipt_0309b332cd25_a256041bdbbf9522.cbor  receipt_0309b332cd25_a256041bdbbf9522.json  receipt_06066abc8887_a256299514d421f1.cbor  receipt_06066abc8887_a256299514d421f1.json  receipt_0612b6166fe5_a256cbde2ce0a184.cbor  receipt_0612b6166fe5_a256cbde2ce0a184.json  receipt_07ce94dcc47b_a25674f2458710a2.cbor  receipt_07ce94dcc47b_a25674f2458710a2.json  receipt_0a192b7e83dd_a2562f7c33c18b08.cbor  receipt_0a192b7e83dd_a2562f7c33c18b08.json  receipt_0b549d46ea60_a2568e1055f02ba1.cbor  receipt_0b549d46ea60_a2568e1055f02ba1.json  receipt_0c6cc98c6ebd_a2569fd63509c650.cbor  (+483 more)
.clusterfuzzlite/: Dockerfile  build.sh  fuzz_receipt.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-review-instructions.md  dependabot.yml  release.yml
.receipts/: receipt_03955ebd2167_a256ff8d84cd9170.json  receipt_07b8b3bad2bf_a2561e00e5f68947.cbor  receipt_07b8b3bad2bf_a2561e00e5f68947.json  receipt_1350e2250449_1772916038_7b3aef04.json  receipt_1f4600a1f36a_a256f12c455563ff.json  receipt_24ccaf06c3bb_a25641fb6e7c7ad3.json  receipt_25efd95ac696_a256d63a8ac45ea8.json  receipt_25efd95ac696_a256d63a8ac45ea8.json.sigstore  receipt_2f92dfba8f9c_a256c41ff524571b.json  receipt_304b4b8f36f2_a25604dd5dfcaa1f.json.sigstore  receipt_37288aa2bf22_a25658aa8e08675b.json  receipt_4405da1e6533_a2561bbd1dc72358.json  receipt_472fe23e9273_a2569df620e354c9.json  receipt_472fe23e9273_a2569df620e354c9.json.sigstore  receipt_4777186a15bc_a25602998b3c6e9f.json  receipt_4baee2d6b7ab_a256d0769216c1fc.json  receipt_61e75e7e2ce5_a2567ec8b820524a.json  receipt_643db50c3ae2_a2563621a26be17f.json  receipt_65fbd809f800_a256d8c3a58da39e.json  receipt_6fd76a436a58_a256ea00d123d6a9.json.sigstore  receipt_7d82c6a80b55_a256616808c7a649.json  receipt_8bf5636ff81b_a256be55c8c83341.json  receipt_a0191bf07be6_a25657ec32f94944.json  receipt_a242af689c36_a25617f6a785b6ce.json  receipt_b23bd0af6b32_a256d1ae32514174.json  receipt_b4553eda2d64_1772916037_66ca8a63.json  receipt_ca006cca50ad_a256c8ba032e9650.json  receipt_cf8033cdafb5_a256e4e751c8d511.json  receipt_cf8033cdafb5_a256e4e751c8d511.json.sigstore  receipt_d5af4cb978e1_a2565ac2f1d9d3dd.json  receipt_df664af8996b_a25620cfe4c4d9b1.json  receipt_e4c8b46742c6_a25686ee4a082a66.cbor  receipt_e4c8b46742c6_a25686ee4a082a66.json  receipt_e854248264f5_1772916037_2f1fee52.json  receipt_eb1843825328_a256f701e17f24e7.json  receipt_f8775f1488d0_a2569378a03dc557.json  receipt_f92064cf1f53_1772916037_15784405.json  receipt_ffe121f79750_a2568fd8827e27c9.json
aiir/: __init__.py  __main__.py  _canonical_cbor.py  _core.py  _detect.py  _explain.py  _github.py  _gitlab.py  _hub_sync.py  _ledger.py  _policy.py  _receipt.py  _schema.py  _sign.py  _stats.py  _verify.py  _verify_cbor.py  _verify_release.py  cli.py  mcp_server.py  py.typed
contrib/: launch-post-devto.md  launch-post-show-hn.md  receipt-viewer.html
docs/: LAUNCH_POSTS.md  api.md  claude-code-hooks.md  enterprise-profile-v1.md  gitlab-compliance-framework.md  gitlab-duo-recipe.md  gitlab-pages-dashboard.md  gitlab-webhooks.md  governance-adoption-plan.md  implementers.md  release-health.md  standards-readiness.md  tamper-detection.md
docs/drafts/: show-hn.md  (+1 more)
examples/: README.md
schemas/: cbor_test_vectors.json  commit_receipt.v1.schema.json  commit_receipt.v2.schema.json  conformance-manifest.json  decision_receipt.v1.schema.json  enterprise_profile.v1.schema.json  receipt.cddl  review_receipt.v1.schema.json  test_vectors.json  verification_summary.v1.schema.json
scripts/: check_licenses.py  ci-local.sh  conformance.py  fetch_public_site_snapshot.py  gen_confusables.py  mutation-test.sh  sync-github-ruleset.sh  sync-version.py  validate_profile.py  verify-pypi-provenance.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs  tests.rs
templates/: azure-pipelines.yml  bitbucket-pipelines.yml  gitlab-ci.yml  gitlab-pages-dashboard.yml  gitlab-publish-pypi.yml
tests/: STRIDE_TRACEABILITY.md  conftest.py  fuzz_atheris.py  test_action_shell.py  test_benchmark.py  test_branch_close.py  test_canonical_cbor.py  test_canonicalization.py  test_cbor_conformance.py  test_claude_hooks.py  test_cli_integration.py  test_core.py  test_coverage_close.py  test_coverage_gaps.py  test_detect.py  test_e2e_ux.py  test_enterprise_profile.py  test_explain.py  test_fuzz.py  test_github.py  test_gitlab.py  test_hardening.py  test_hub_sync.py  test_intoto.py  test_ledger.py  test_mcp.py  test_mcp_protocol.py  test_policy.py  test_properties.py  test_public_surface.py  test_receipt.py  test_redteam.py  test_redteam_hostile.py  test_roadmap_p0_p4.py  test_schema.py  test_scripts.py  test_sign.py  test_transport_attestation.py  test_verify.py  test_verify_release.py  (+1 more)
(+109 files in other folders)
