[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiir"
dynamic = ["version"]
description = "AI Integrity Receipts — cryptographic receipts for commits with declared AI involvement"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Invariant Systems, Inc.", email = "noah@invariantsystems.io" },
]
keywords = [
    "ai",
    "receipts",
    "audit",
    "compliance",
    "copilot",
    "chatgpt",
    "claude",
    "git",
    "cryptographic",
    "integrity",
    "mcp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]

# ZERO dependencies — Python standard library only
dependencies = []

[project.optional-dependencies]
sign = ["sigstore>=4.0.0,<5.0.0"]
dev = ["hypothesis>=6.0", "pytest>=7.0", "mutmut>=3.0"]

[project.urls]
Homepage = "https://invariantsystems.io"
Documentation = "https://github.com/invariant-systems-ai/aiir/blob/main/docs/api.md"
Repository = "https://github.com/invariant-systems-ai/aiir"
Issues = "https://github.com/invariant-systems-ai/aiir/issues"
Changelog = "https://github.com/invariant-systems-ai/aiir/blob/main/CHANGELOG.md"

[project.scripts]
aiir = "aiir.cli:main"
aiir-mcp-server = "aiir.mcp_server:main"

[tool.hatch.version]
path = "aiir/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "aiir/**/*.py",
    "aiir/py.typed",
    "LICENSE",
    "NOTICE",
    "TRADEMARK.md",
    "README.md",
    "CHANGELOG.md",
    "SECURITY.md",
    "THREAT_MODEL.md",
]

[tool.hatch.build.targets.wheel]
packages = ["aiir"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff.lint]
# Use default rule selection (E4, E7, E9, F).

[tool.ruff.lint.per-file-ignores]
# Tests: allow ambiguous var names (l), unused assignments (captures),
# and class redefinitions (parameterized test patterns).
"tests/**" = ["E741", "F841", "F811"]

# ── Mutmut (mutation testing) ─────────────────────────────────────────
[tool.mutmut]
# Target the security-critical modules — these are the ones where
# a surviving mutant represents a real missed check.
# We point at the entire package so copy_src_dir brings __init__.py, _core.py, etc.
paths_to_mutate = ["aiir/"]
# Only mutate the five core modules; skip CLI, MCP, integrations, etc.
do_not_mutate = [
    "aiir/__init__.py",
    "aiir/__main__.py",
    "aiir/cli.py",
    "aiir/mcp_server.py",
    "aiir/_core.py",
    "aiir/_explain.py",
    "aiir/_github.py",
    "aiir/_gitlab.py",
    "aiir/_ledger.py",
    "aiir/_sign.py",
    "aiir/_stats.py",
    "aiir/_verify_release.py",
]
# Focus test runner on relevant tests for speed.
# NOTE: tests_dir is appended to test selection; omit when using explicit files.
debug = false
pytest_add_cli_args = [
    "-x", "-q", "--tb=no", "--no-header",
    # Deselect tests that use inspect.getsource (incompatible with trampoline)
    # or check non-code artifacts (py.typed marker).
    "--deselect=tests/test_receipt.py::TestDelimiterInjection::test_pipe_in_author_name_does_not_shift_fields",
    "--deselect=tests/test_receipt.py::TestMaxCount::test_max_count_in_git_command",
    "--deselect=tests/test_receipt.py::TestPublicBasic::test_help_text_contains_url",
    "--deselect=tests/test_receipt.py::TestPublicBasic::test_r7_pub_02_py_typed_marker_exists",
    "--deselect=tests/test_verify.py::TestSafeVerifyPathNoDeadCode::test_no_raw_parts_variable",
    "--deselect=tests/test_verify.py::TestIterativeJsonDepthCheck::test_implementation_is_iterative",
]
pytest_add_cli_args_test_selection = [
    "tests/test_verify.py",
    "tests/test_schema.py",
    "tests/test_policy.py",
    "tests/test_detect.py",
    "tests/test_receipt.py",
    "tests/test_properties.py",
]
also_copy = ["aiir/py.typed"]
