# SPDX-License-Identifier: Apache-2.0
# Copyright 2025-2026 Invariant Systems, Inc.

[package]
name = "aiir-cbor-verify"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Cross-language deterministic CBOR decoder for AIIR canonical objects"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
